2011-10-04  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: [Issue 5]: Reworked "topology cpubind|membind".
	* generic/topology.c: Made the options ignored by sub-methods 'get'
	* tests/topology_cpubind.test: and 'last' illegal. Updated testsuite
	* tests/topology_membind.test: and documentation.

	* doc/instance.inc: [Issue 5]: Reworked "topology element_by",
	* generic/topology.c: dropped the redundant options, auto-detect
	* tests/topology.test: argument-type. Updated testsuite and documentation.

	* doc/instance.inc: [Issue 5]: Reworked "topology width",
	* generic/topology.c: dropped the redundant options, auto-detect
	* tests/create.test: argument-type. Updated testsuite and documentation.
	* tests/topology.test:

	* doc/instance.inc: [Issue 5]: Reworked "topology depth|type",
	* generic/topology.c: dropped the redundant options. Updated
	* tests/create.test: testsuite and documentation.
	* tests/topology.test:

2011-10-03  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: [Issue 5]: Reworked "topology convert",
	* generic/topology.c: changed -to_ options into methods.
	* tests/topology_convert.test: Updated testsuite and
	  documentation.

2011-09-29  Andreas Kupries  <andreask@activestate.com>

	* generic/hwloc.c: [Issue 3]: Changed the -set_xxx options of
	* tests/create.test: [hwloc create] to -xxx. Updated the test
	* tests/topology.test: suite and documentation as well.
	* tests/topology_convert.test:
	* tests/topology_cpu_node_set.test:
	* doc/class.inc:
	* doc/instance.inc:

2011-09-29  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in: [Issue 12] Updated target 'dist' to place
	  'tclhwloc.m4' into the distribution, and copy the tarball into
	  the current working directory.

2011-09-22  Andreas Kupries  <andreask@activestate.com>

	* tclhwloc.m4: Accepted and applied patch by Jeff Squyres
	  <jsquyres@cisco.com> which tweaks the checks, data, and messages
	  a bit.